fix update user data
